refactor(all): small refactor